# demo

./: README.md
Assemble/: Makefile
C/arg/: Makefile  main.c
C/array/: main.c
C/atexit/: Makefile  main.c
C/cmd/: main.c
C/macro-func/: main.c
C/macro-string/: main.c
C/split-string/: main.c
C/string/: main.c
C/va-arg/: Makefile  main.c
CMake/base/dynamic/: CMakeLists.txt
CMake/base/exe/: CMakeLists.txt  Makefile
CMake/base/static/: CMakeLists.txt  Makefile
CMake/gen-compile-cmd/: CMakeLists.txt  Makefile
CPP/Class/init_func/: main.cpp
CPP/Class/init_list/: main.cpp
CPP/Class/operator/: main.cpp
CPP/STL/string/: main.cpp
CPP/regex/: main.cpp
Python/tcp/: client.py  server.py
concurrency/asynchronous-IO/: Makefile  main.cpp
concurrency/call_once/: main.cpp
concurrency/inotify/: Makefile  main.cpp
concurrency/lock_guard/: Makefile  main.cpp
network/ifr-status/: main.cpp
network/ip-address/: Makefile  main.cpp
network/ipScanner/: Makefile  main.cpp
network/mac-address/: main.cpp
network/netmask-address/: Makefile  main.cpp
sys-tool/cal-file-size/: Makefile  main.cpp
sys-tool/cal-runtime/: main.cpp
sys-tool/clear-all-file/: main.cpp
sys-tool/directory/: main.cpp  main2.cpp
sys-tool/folder-operation/: main.cpp
sys-tool/get-path/: Makefile  main.cpp
sys-tool/syslog/: Makefile  syslog.cpp
sys-tool/system-cmd/: main.cpp
sys-tool/system-info/: main.cpp
sys-tool/time/: main.cpp
sys-tool/timer/: Makefile  main.cpp
testCode/: doublePointer-char.cpp  doublePointer.cpp  funcPointer.cpp
(+63 files in other folders)
